--- a/Frontend/src/components/Patient/PatientDetailCardStyle.css
+++ b/Frontend/src/components/Patient/PatientDetailCardStyle.css
@@ -15,7 +15,7 @@
 }
 
 .patient-detailcard-edit-button {
-    background-color: #2563eb;
+    background-color: #10b981;
     color: white;
     border: none;
     border-radius: 8px;
