--- a/Frontend/src/components/Patient/AlertModalStyle.css
+++ b/Frontend/src/components/Patient/AlertModalStyle.css
@@ -15,7 +15,8 @@
   /* 모달 컨테이너 */
   .alert-modal-content {
     background-color: #fff;
-    width: 70%;
+    width: 80%;
+    height: 70;
     max-width: 800px;
     border-radius: 10px;
     overflow: hidden;
@@ -27,7 +28,7 @@
   /* 모달 헤더 */
   .alert-modal-header {
     padding: 20px;
-    background-color: #f44336;
+    background-color: #10b981;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -65,7 +66,7 @@
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 10px;
-    border: 3px solid #f44336;
+    border: 3px solid #10b981;
   }
   
   .patient-info-group h3 {
@@ -89,7 +90,7 @@
   
   .urgent-care-box {
     background-color: #f9f9f9;
-    border-left: 4px solid #f44336;
+    border-left: 4px solid #10b981;
     padding: 15px;
     margin-bottom: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -139,7 +140,7 @@
   }
   
   .action-input-group textarea:focus {
-    border-color: #f44336;
+    border-color: #10b981;
     box-shadow: 0 0 4px rgba(244, 67, 54, 0.4);
   }
   
@@ -172,10 +173,10 @@
   }
   
   .alert-modal-save {
-    background-color: #f44336;
+    background-color: #10b981;
     color: white;
   }
   
   .alert-modal-save:hover {
-    background-color: #e53935;
+    background-color: #059669;
   }
