--- a/Frontend/src/components/Patient/AlertModalStyle.css
+++ b/Frontend/src/components/Patient/AlertModalStyle.css
@@ -56,19 +56,24 @@
   }
   
   .patient-info-group {
+    justify-content:center ;
     text-align: center;
     margin-bottom: 20px;
   }
   
   .patient-photo {
+    align-content: center;
     width: 100px;
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 10px;
     border: 3px solid #10b981;
   }
-  
+  .patient-photo-img{
+    width: 80px;
+    height: 80px;
+  }
+
   .patient-info-group h3 {
     margin: 5px 0;
   }
