--- a/Frontend/src/components/Patient/FloorStyle.css
+++ b/Frontend/src/components/Patient/FloorStyle.css
@@ -16,7 +16,7 @@
 
 /* 활성화된 버튼 스타일 */
 .patient-floor-button.active {
-  background-color: #a7f3d0; /* 활성화된 더 진한 민트 색상 */
+  background-color: #5CBF7E; /* 활성화된 더 진한 민트 색상 */
 }
 
 /* 버튼 호버 효과 */
