--- a/Frontend/src/components/Patient/PatientDetailCardStyle.css
+++ b/Frontend/src/components/Patient/PatientDetailCardStyle.css
@@ -2,7 +2,7 @@
     background: white;
     border-radius: 12px;
     padding: 20px;
-    width: 100%;
+    width: 1280px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
 }
@@ -15,7 +15,7 @@
 }
 
 .patient-detailcard-edit-button {
-    background-color: #10b981;
+    background-color: #38A169;
     margin-right:  20px;
     color: white;
     border: none;
