--- a/Frontend/src/pages/PatientDetailStyle.css
+++ b/Frontend/src/pages/PatientDetailStyle.css
@@ -53,6 +53,8 @@
   .treatment-records-list {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
     gap: 12px;
   }
   
