--- a/Frontend/src/pages/PatientListStyle.css
+++ b/Frontend/src/pages/PatientListStyle.css
@@ -45,7 +45,7 @@
     width: 150px;
     height: 40px;
     padding: 10px 20px;
-    background-color: #10b981; /* 초록색 배경 */
+    background-color:#38A169; /* 초록색 배경 */
     color: white; /* 흰색 텍스트 */
     border: none;
     border-radius: 8px;
