--- a/Frontend/src/components/Patient/AlertModalStyle.css
+++ b/Frontend/src/components/Patient/AlertModalStyle.css
@@ -13,15 +13,19 @@
   font-family: 'Noto Sans KR', sans-serif;
 }
 
-.alert-modal-overlay h3, h4, p {
+.alert-modal-overlay h3, p {
   margin: 0;
+}
+
+.alert-modal-overlay h4{
+  margin: 10px 0;
 }
 
 /* 모달 컨테이너 */
 .alert-modal-content {
   background-color: #F5F5F5;
-  width: 60%;
-  max-width: 500px;
+  width: 90%;
+  max-width: 700px;
   max-height: 700px;
   border-radius: 12px;
   overflow: hidden;
@@ -86,6 +90,9 @@
   border-radius: 5px;
   font-size: 14px;
 }
+.alert-modal-left{
+  width: 50%;
+}
 
 .urgent-care-box p {
   width: 100%;
@@ -149,9 +156,7 @@
   .alert-modal-body {
     flex-direction: column;
     align-items: center;
-    gap: 10px;
   }
-
   .patient-info-group {
     display: flex;
     flex-direction: column;
@@ -176,6 +181,6 @@
   }
   .alert-modal-left{
     display: flex;
-    gap :20px
+    flex-direction: column;
   }
 }
